syntax = "proto3";
package types;

// share
message PingRequest {}
message PingReply  {
  string message = 1;
}


// account service
message Account {
  string id = 1;
  string email = 2;
  string username = 3;

  string created_at = 20;
  string updated_at = 21;
}

message Profile {
  string id = 1;
  string display_name = 2;
  string status_message = 3;
  string icon_path = 4;

  string created_at = 20;
  string updated_at = 21;
}


// talk service
enum MessageType {
  TEXT = 0;

  IMAGE = 1;
  VIDEO = 2;
  GIF = 3;

  LOCATION = 4;
  CONTACT = 5;
}

message Message {
  string id = 1;
  string from = 2; // message sender
  string to = 3; // message receiver
  MessageType content_type = 4;
  string metadata = 5; // json
  string text = 6;

  string created_at = 20;
  string updated_at = 21;
}


// operation service
enum OpType {
  NOOP = 0;
}

message Operation {
  int64 id = 1;
  OpType op_type = 2;
  string source = 3;
  repeated string dest = 4;
}